--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,8 @@ jobs:
       - git/shallow-checkout
       - android/restore-gradle-cache
       - copy-gradle-properties
-      - update-gradle-memory
+      - update-gradle-memory:
+          jvmargs: "Xmx1536m"
       - run:
           name: Build
           command: ./gradlew WordPress:assembleWordPressVanillaDebug --stacktrace
